--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-
-    <script src="js/main.js "type="text/javascript"></script>
+    <script src="js/cyoa.js "type="text/javascript"></script>
   </body>
 </html>
