--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 
       <!--    Canvas start     -->
-      <div id="canvasBox" class="gameBox">
-        <h2>Canvas</h2>
+      <canvas id="canvasBox" class="gameBox">
 
 
-      </div>
+
+      </canvas>
       <!--         Canvas end         -->
 
 
@@ -75,6 +75,9 @@
 
 
   <script src="js/main.js " type="text/javascript"></script>
+  <script src="js/canvas.js"type="text/javascript">
+
+  </script>
 </body>
 
 </html>
