--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 
       <!--    Canvas start     -->
-      <canvas id="canvasBox" class="gameBox">
+      <Div id="QoDBox" class="gameBox">
 
 
 
-      </canvas>
+      </Div>
       <!--         Canvas end         -->
 
 
@@ -75,7 +75,7 @@
 
 
   <script src="js/main.js " type="text/javascript"></script>
-  <script src="js/canvas.js"type="text/javascript">
+  <script src="js/QoD.js"type="text/javascript">
 
   </script>
 </body>
