--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
       <!--          CYOA start         -->
       <div id="cyoaBox" class="gameBox">
         <h2>C.Y.O.A</h2>
-
-
+        <button eventListener="cyoa()" id="startButton">Begin</button>
       </div>
       <!--          CYOA end        -->
 
@@ -75,7 +74,9 @@
 
 
   <script src="js/cyoa.js "type="text/javascript"></script>
+  <script src="js/main.js "type="text/javascript"></script>
 
+</script>
 </body>
 
 </html>
