--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="headerLogo">
-      <h1>LOGO HERE</h1>
+      <h1>HACKATHON</h1>
     </div>
 
   </header>
@@ -26,7 +26,7 @@
       <div id="scrambleBox" class="gameBox overlay overlayScramble">
         <input id="scramInput" onClick="reset()" type="text" value="" placeholder="Type Word Here">
         <button id="scramButton" onClick="scramble()" type="button" name="button">scramble</button>
-        <button id="resetButton" onClick="reset()" type="button" name="button">reset</button>
+        <button id="resetScramble" onClick="reset()" type="button" name="button">reset</button>
       </div>
       <!--  Word scramble end  -->
 
@@ -48,7 +48,7 @@
 
       <!--    Canvas start     -->
       <div id="canvasBox" class="gameBox overlay overlayCanvas">
-        <h2>Canvas</h2>
+        <h2>Simon Says</h2>
 
 
       </div>
