Included reset button and fixed bugs

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!--          CYOA start         -->
       <div id="cyoaBox" class="gameBox overlay overlayCyoa">
         <h2>C.Y.O.A</h2>
-        <button eventListener="cyoa()" id="startButton">Begin</button>
+        <button id="beginButton">Begin</button>
       </div>
       <!--          CYOA end        -->
 
