--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
       <!-- **************************** -->
 
 
-      <!--    Canvas start     -->
-      <div id="canvasBox" class="gameBox overlay overlayCanvas">
-        <h2>Simon Says</h2>
-
+      <!--    ColorGame start     -->
+      <div class="gameBox overlay overlayColorGame">
 
       </div>
-      <!--         Canvas end         -->
+      <!--         ColorGame end         -->
 
 
 
@@ -68,6 +66,25 @@
 
       </div>
       <!--          CYOA end        -->
+
+      <div id="colorGame" class="gameBox overlay overlayColorGame">
+        <div id="colorNameContainer">
+          <h3 id="colorNameSpace"></h3>
+            <button id="colorGameStart" onClick="colorGame()" type="button" name="button">Start</button>
+        </div>
+
+        <div id="colorButtonContainer">
+          <button id="redButton" class="guessButton" type="button" name="button" value="Red"></button>
+          <button id="purpleButton" class="guessButton" type="button" name="button" value="Purple"></button>
+          <button id="blueButton" class="guessButton" type="button" name="button" value="Blue"></button>
+          <button id="greenButton" class="guessButton" type="button" name="button" value="Green"></button>
+          <button id="yellowButton" class="guessButton" type="button" name="button" value="Yellow"></button>
+          <button id="orangeButton" class="guessButton" type="button" name="button" value="Orange"></button>
+        </div>
+      </div>
+
+
+
 
 
     </div>
