build out colorGame functionality

--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 
       <div id="colorGame" class="gameBox overlay overlayColorGame">
         <div id="colorNameContainer">
-          <h3 id="colorNameSpace"></h3>
+          <p id="colorNameSpace"></p>
             <button id="colorGameStart" onClick="colorGame()" type="button" name="button">Start</button>
         </div>
 
         <div id="colorButtonContainer">
-          <button id="redButton" class="guessButton" type="button" name="button" value="Red"></button>
-          <button id="purpleButton" class="guessButton" type="button" name="button" value="Purple"></button>
-          <button id="blueButton" class="guessButton" type="button" name="button" value="Blue"></button>
-          <button id="greenButton" class="guessButton" type="button" name="button" value="Green"></button>
-          <button id="yellowButton" class="guessButton" type="button" name="button" value="Yellow"></button>
-          <button id="orangeButton" class="guessButton" type="button" name="button" value="Orange"></button>
+          <button id="redButton" class="guessButton" type="button" name="button" value="RED"></button>
+          <button id="purpleButton" class="guessButton" type="button" name="button" value="PURPLE"></button>
+          <button id="blueButton" class="guessButton" type="button" name="button" value="BLUE"></button>
+          <button id="greenButton" class="guessButton" type="button" name="button" value="GREEN"></button>
+          <button id="yellowButton" class="guessButton" type="button" name="button" value="YELLOW"></button>
+          <button id="orangeButton" class="guessButton" type="button" name="button" value="ORANGE"></button>
         </div>
       </div>
 
