--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <!--          CYOA start         -->
       <div id="cyoaBox" class="gameBox overlay overlayCyoa">
-        <h2>C.Y.O.A</h2>
+        <h2>The Iron Yard Adventure</h2>
         <button id="beginButton">Begin</button>
       </div>
       <!--          CYOA end        -->
