--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
 
       <!-- **************************** -->
-
+      <div id = 'colorBox' class="gameBox overlay overlayColorGame">
+        <h2>Color Randomizer</h2>
+      </div>
 
       <!--    ColorGame start     -->
       <div id="colorGame" class="gameBox overlay overlayColorGame">
