--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Hack-a-thon</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <div class="headerLogo">
-      <h1>HACKATHON</h1>
+      <h1>hackathon</h1>
     </div>
 
   </header>
