--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!--   Color Randomizer Start    -->
 
-      <div id ="colorBox" class="gameBox overlay overlayColorGame">
+      <div id ="colorBox" class="gameBox overlay overlayRandomizer">
         <h2 id="colRanTitle">Color Randomizer</h2>
         <p id="colRanDir">Click to randomize</p>
         <div id="trogPop">
